#2462 Modify the expansion of crit-condition for values with wildcards